<resources>
    <string name="app_name">My NASA Application</string>
    <string name="search_in_wiki">Найти в Википедии</string>
    <string name="search_in_wiki_hint">Поищите теримин в википедии</string>
    <string name="photo_of_the_day">Фото дня</string>
    <string name="add_to_fav">Добавить в избранное</string>
    <string name="settings">Настройки</string>
    <string name="clear">Очистить</string>
    <string name="move_to_1st_screen">На экран 1</string>
    <string name="move_to_2nd_screen">На экран 2</string>
    <string name="add">Добавить</string>
    <string name="yesterday">Вчера</string>
    <string name="two_days_ago">Два дня назад</string>
    <string name="wine_red_theme">Wine-Red Theme</string>
    <string name="spring_theme">Spring Theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="title_activity_bootom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="already_tapped">Already tapped</string>
    <string name="photo_of_mars">Photo Of Mars</string>
    <string name="photo_of_earth">Photo of Earth</string>
    <string name="photo_of_moon">Photo of Moon</string>
    <string name="moon">Moon</string>
    <string name="mars">Mars</string>
    <string name="earth">Earth</string>
    <string name="solar_system">Solar system</string>
    <string name="show_date">Show Date</string>
    <string name="sun">sun</string>
    <string name="mercury">mercury</string>
    <string name="venus">venus</string>
    <string name="jupiter">jupiter</string>
    <string name="saturn">saturn</string>
    <string name="uranus">uranus</string>
    <string name="neptun">neptun</string>
    <string name="pluto">pluto</string>
    <string name="any_day">Any day</string>
    <string name="animation">Animation</string>
    <string name="description1">Солнечная система — звёздная система в галактике Млечный Путь, включающая Солнце и естественные космические объекты, обращающиеся вокруг него: планеты, их спутники, карликовые планеты, астероиды, метеороиды, кометы и космическую пыль.</string>
    <string name="description2">В состав солнечной системы входит восемь основных планет и пять карликовых, вращающихся приблизительно в одной плоскости. По своим физическим свойствам планеты делятся на земную группу и планеты-гиганты.</string>
    <string name="background_milky_way">background milky way</string>
    <string name="tap_me">Tap me</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="move_to_3d_screen">На экран 3</string>
    <string name="header">Header</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="note_image">Note Image</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="handle">handle</string>
    <string name="delete">delete</string>
    <string name="_01_01_21">01.01.21</string>
    <string name="move_to_4_screen">На экран 4</string>
    <string name="teal_green">Teal Green</string>
</resources>