<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/title_and_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/note_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/title_text_size"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_01_01_21"
            android:textSize="@dimen/title_text_size"
            android:textAlignment="textEnd"/>

    </LinearLayout>



        <ImageView
            android:id="@+id/note_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf= "@id/title_and_date_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/note_image"/>

    <ImageView
        android:id="@+id/move_item_up"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/title_and_date_layout"
        app:layout_constraintRight_toLeftOf="@id/move_item_up"
        app:layout_constraintLeft_toRightOf="@id/note_image"
        android:layout_margin="5dp"
        android:src="@drawable/ic_up"
        android:contentDescription="@string/up"/>

    <ImageView
        android:id="@+id/move_item_down"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/move_item_up"
        app:layout_constraintRight_toLeftOf="@id/move_item_down"
        app:layout_constraintLeft_toRightOf="@id/note_image"
        android:layout_margin="5dp"
        android:src="@drawable/ic_down"
        android:contentDescription="@string/down"/>

    <ImageView
        android:id="@+id/drag_handle_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/title_and_date_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/move_item_up"
        android:layout_margin="5dp"
        android:src="@drawable/ic_baseline_drag_handle_24"
        android:contentDescription="@string/handle"/>

    <ImageView
        android:id="@+id/remove_item_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/move_item_up"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/move_item_down"
        android:layout_margin="5dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:contentDescription="@string/delete"/>

    <TextView
        android:id="@+id/note_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/note_image"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:text="@string/description2"
        android:textSize="25sp"
        tools:visibility="visible"
        />



</androidx.constraintlayout.widget.ConstraintLayout>